--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@heroicons/react": "^1.0.6",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-currency-formatter": "^1.1.0",
+    "react-dom": "18.0.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
     "@types/node": "17.0.23",
     "@types/react": "18.0.0",
+    "@types/react-currency-formatter": "^1.1.4",
     "@types/react-dom": "18.0.0",
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
