--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.1",
     "firebase": "^9.6.10",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
     "react": "18.0.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.0.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-redux": "^7.2.8",
+    "react-responsive-carousel": "^3.2.23",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
