--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
+    "@stripe/stripe-js": "^1.27.0",
+    "axios": "^0.26.1",
     "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
+    "micro": "^9.3.4",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
     "react": "18.0.0",
@@ -20,7 +24,8 @@
     "react-redux": "^7.2.8",
     "react-responsive-carousel": "^3.2.23",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "stripe": "^8.217.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
