--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.4.8",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@stripe/stripe-js": "^1.27.0",
     "axios": "^0.26.1",
-    "firebase": "^9.6.10",
+    "firebase": "8.10.0",
     "firebase-admin": "^10.0.2",
     "micro": "^9.3.4",
+    "moment": "^2.29.2",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
     "react": "18.0.0",
